# ChangeLog for x11-themes/openbox-themes
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/openbox-themes/Attic/ChangeLog,v 1.20 2007/02/21 22:53:18 jokey Exp $

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  openbox-themes-0.6-r1.ebuild:
  Add ~x86-fbsd keyword as per bug #156873. Thanks to Mark Kowarsky
  (mark_alec) for reporting.

  14 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  openbox-themes-0.6-r1.ebuild:
  Stable on sparc

  24 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
  openbox-themes-0.6-r1.ebuild:
  FreeBSD fixes: cp -a -> cp -pPR.

  01 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  openbox-themes-0.5-r1.ebuild, openbox-themes-0.6.ebuild,
  openbox-themes-0.6-r1.ebuild:
  Modified gtk-engines-thinice dependency to gtk-engines, since the latter
  provides the ThinIce engine now, and >=x11-themes/gtk-engines-thinice-2 is
  being deprecated.

*openbox-themes-0.6-r1 (03 Jan 2005)

  03 Jan 2005; Tom Martin <slarti@gentoo.org> +openbox-themes-0.6-r1.ebuild:
  Revision bumping, including a workaround from bug 50985. Thanks to John Ross
  Hunt <john.ross.hunt@comcast.net> for reporting. Also, changing the gnome
  IUSE to gtk IUSE. Change DEPEND to RDEPEND.

  06 May 2004; Brandon Hale <tseng@gentoo.org> -openbox-themes-0.2.ebuild,
  openbox-themes-0.5-r1.ebuild, openbox-themes-0.6.ebuild:
  Remove explicit S=

  06 May 2004; Ciaran McCreesh <ciaranm@gentoo.org> openbox-themes-0.6.ebuild:
  Added ~sparc, #50234

*openbox-themes-0.6 (04 Apr 2004)

  04 Apr 2004; Brandon Hale <tseng@gentoo.org> openbox-themes-0.6.ebuild:
  Rolled a new version.

  24 Jan 2004; Brandon Hale <tseng@gentoo.org> openbox-themes-0.5-r1.ebuild:
  Update homepage.

  24 Jan 2004; Brandon Hale <tseng@gentoo.org> openbox-themes-0.5-r1.ebuild: