@@ -1,12 +1,12 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/openbox-themes/Attic/openbox-themes-0.6-r1.ebuild,v 1.5 2006/12/07 02:05:19 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/openbox-themes/Attic/openbox-themes-0.6-r1.ebuild,v 1.6 2007/04/22 09:42:26 corsair Exp $
 
 DESCRIPTION="A set of themes for Openbox3."
 SRC_URI="mirror://gentoo/${P}.tar.bz2"
 HOMEPAGE="http://gumerry.co.uk/themes/"
 LICENSE="GPL-2"
-KEYWORDS="amd64 ppc sparc x86 ~x86-fbsd"
+KEYWORDS="amd64 ppc ~ppc64 sparc x86 ~x86-fbsd"
 IUSE="gtk"
 SLOT="0"
 
