@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/Attic/openbox-3.3.1.ebuild,v 1.8 2007/04/22 01:17:44 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/Attic/openbox-3.3.1.ebuild,v 1.9 2007/04/22 09:40:22 corsair Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://icculus.org/openbox/releases/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="3"
-KEYWORDS="alpha amd64 hppa ppc sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 hppa ppc ~ppc64 sparc x86 ~x86-fbsd"
 IUSE="nls pango startup-notification xinerama"
 
 RDEPEND=">=dev-libs/glib-2
