@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/openbox
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.122 2007/04/22 01:17:44 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.123 2007/04/22 09:40:22 corsair Exp $
+
+  22 Apr 2007; Markus Rothe <corsair@gentoo.org> openbox-3.3.1.ebuild:
+  Added ~ppc64
 
   22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> openbox-3.3.1.ebuild:
   Stable on Alpha, bug 175052.
